@@ -395,16 +395,6 @@ unsigned int QRspec_getFormatInfo(int mask, QRecLevel level)
  *****************************************************************************/
 
 /**
- * Cache of initial frames.
- */
-/* C99 says that static storage shall be initialized to a null pointer
- * by compiler. */
-static unsigned char *frames[QRSPEC_VERSION_MAX + 1];
-#ifdef HAVE_LIBPTHREAD
-static pthread_mutex_t frames_mutex = PTHREAD_MUTEX_INITIALIZER;
-#endif
-
-/**
  * Put a finder pattern.
  * @param frame
  * @param width
@@ -521,42 +511,7 @@ static unsigned char *QRspec_createFrame(int version)
 
 unsigned char *QRspec_newFrame(int version)
 {
-	unsigned char *frame;
-	int width;
-
 	if(version < 1 || version > QRSPEC_VERSION_MAX) return NULL;
 
-#ifdef HAVE_LIBPTHREAD
-	pthread_mutex_lock(&frames_mutex);
-#endif
-	if(frames[version] == NULL) {
-		frames[version] = QRspec_createFrame(version);
-	}
-#ifdef HAVE_LIBPTHREAD
-	pthread_mutex_unlock(&frames_mutex);
-#endif
-	if(frames[version] == NULL) return NULL;
-
-	width = qrspecCapacity[version].width;
-	frame = (unsigned char *)malloc(width * width);
-	if(frame == NULL) return NULL;
-	memcpy(frame, frames[version], width * width);
-
-	return frame;
-}
-
-void QRspec_clearCache(void)
-{
-	int i;
-
-#ifdef HAVE_LIBPTHREAD
-	pthread_mutex_lock(&frames_mutex);
-#endif
-	for(i=1; i<=QRSPEC_VERSION_MAX; i++) {
-		free(frames[i]);
-		frames[i] = NULL;
-	}
-#ifdef HAVE_LIBPTHREAD
-	pthread_mutex_unlock(&frames_mutex);
-#endif
+	return QRspec_createFrame(version);
 }
