@@ -68,7 +68,5 @@ int main(int argc, char **argv)
 	prof_ver1to10();
 	prof_ver31to40();
 
-	QRcode_clearCache();
-
 	return 0;
 }
